# deploy-weather-back

./: db.sqlite3  pyproject.toml  requirements.txt
app/: admin.py  models.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_favotitecity_user.py
config/: settings.py  urls.py
usuario/: admin.py  models.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_username.py  0003_alter_usuario_username.py  0004_alter_usuario_username.py
